--- a/app/src/main/res/layout/activity_create_acount.xml
+++ b/app/src/main/res/layout/activity_create_acount.xml
@@ -145,6 +145,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
                 android:layout_marginTop="0dp"
+                android:textColor="@color/colorPrimaryDark"
                 android:text=" Provide your correct phone and country code"
                 android:textAlignment="center" />
 
