--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,24 +9,30 @@
         android:id="@+id/HomeToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:titleTextColor="@color/cardview_light_background"
+
         android:background="@color/colorPrimary">
 
     </android.support.v7.widget.Toolbar>
+
     <FrameLayout
         android:id="@+id/FragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="463dp"
+        app:layout_constraintBottom_toTopOf="@+id/menuNavigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/HomeToolbar">
 
     </FrameLayout>
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/menuNavigation"
-        android:layout_width="344dp"
+        android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:background="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/menu_items"/>
+        app:menu="@menu/menu_items" />
 </android.support.constraint.ConstraintLayout>
