--- a/app/src/main/res/layout/activity_create_acount.xml
+++ b/app/src/main/res/layout/activity_create_acount.xml
@@ -95,28 +95,11 @@
 
     </ScrollView>
 
-    <TextView
-        android:id="@+id/txtuserEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="200dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="User email and password"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.609"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneAuthView"
-        app:layout_constraintVertical_bias="0.39" />
 
     <ScrollView
         android:id="@+id/phoneAuthView"
         android:layout_width="344dp"
-        android:layout_height="285dp"
+        android:layout_height="375dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -145,9 +128,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
                 android:layout_marginTop="0dp"
-                android:textColor="@color/colorPrimaryDark"
                 android:text=" Provide your correct phone and country code"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark" />
 
             <com.hbb20.CountryCodePicker
                 android:id="@+id/countryCodePicker"
@@ -176,14 +159,28 @@
 
             <Button
                 android:id="@+id/sendCode"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="64dp"
-                android:layout_marginTop="50dp"
-                android:background="@drawable/btn_next"
+                android:layout_width="120dp"
+                android:layout_height="35dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="40dp"
+                android:background="@color/colorTextPrimary"
+                android:layout_gravity="center"
                 android:text="Next"
+                android:textSize="14dp"
                 android:textColor="@android:color/background_light" />
 
+            <Button
+                android:id="@+id/txtuserEmail"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginBottom="20dp"
+                android:padding="8dp"
+                android:background="@android:color/transparent"
+                android:text="User email and password"
+                android:textColor="@android:color/holo_blue_dark"
+                android:textSize="14sp"
+                android:layout_gravity="center"
+             />
 
         </LinearLayout>
     </ScrollView>
