--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,15 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:titleTextColor="@color/cardview_light_background"
-
-        android:background="@color/colorPrimary">
-
-    </android.support.v7.widget.Toolbar>
+         android:background="@color/colorPrimary">
+     </android.support.v7.widget.Toolbar>
 
     <FrameLayout
         android:id="@+id/FragmentContainer"
-        android:layout_width="match_parent"
-        android:layout_height="463dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/menuNavigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +28,7 @@
         android:id="@+id/menuNavigation"
         android:layout_width="match_parent"
         android:layout_height="47dp"
-        android:background="@color/colorAccent"
+        android:background="@color/cardview_light_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
