--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,37 +6,60 @@
     android:layout_height="match_parent"
     tools:context=".Profile">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/profileToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:title="Profile"
+        app:titleTextColor="@color/cardview_light_background">
+
+    </android.support.v7.widget.Toolbar>
+
     <RelativeLayout
         android:id="@+id/relativeLayout2"
         android:layout_width="match_parent"
-        android:layout_height="193dp"
-        android:background="@color/colorPrimary"
+        android:layout_height="200dp"
+        android:background="@drawable/profile_background"
+
+        android:outlineProvider="background"
+        app:layout_constraintTop_toBottomOf="@+id/profileToolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        tools:layout_editor_absoluteY="57dp">
 
-        <TextView
-            android:layout_width="141dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/circleImageView"
-            android:text="Personal Info"
-            android:textColor="@color/cardview_light_background"
-            android:textSize="19dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_centerHorizontal="true"
+            android:orientation="vertical">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/circleImageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="56dp"
-            android:src="@drawable/avatar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/circleImageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:alpha="0.8"
+                android:src="@color/cardview_dark_background"
+                app:civ_border_color="@color/cardview_light_background"
+                app:civ_border_width="2dp" />
+
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/btnAddImage"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="54dp"
+            android:background="@drawable/ic_add_a_photo_black_24dp" />
     </RelativeLayout>
 
 
@@ -53,59 +76,66 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
         app:layout_constraintVertical_bias="0.038">
-     <LinearLayout
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:orientation="vertical"
-         android:paddingLeft="40dp"
-         android:paddingTop="20dp">
-         <android.support.design.widget.TextInputLayout
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content">
-             <EditText
-                 android:id="@+id/txtFullName"
-                 android:layout_width="249dp"
-                 android:layout_height="wrap_content"
-                 android:hint="Full Name"
-                 android:imeActionId="6"
-                 android:layout_margin="5dp"/>
-     </android.support.design.widget.TextInputLayout>
 
-     <android.support.design.widget.TextInputLayout
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content">
-         <EditText
-             android:id="@+id/txtNickName"
-             android:layout_width="249dp"
-             android:layout_height="wrap_content"
-             android:layout_margin="5dp"
-             android:hint="Nick Name"
-             android:imeActionId="6"/>
-     </android.support.design.widget.TextInputLayout>
-     <android.support.design.widget.TextInputLayout
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content">
-         <EditText
-             android:id="@+id/txtBio"
-             android:layout_margin="5dp"
-             android:layout_width="249dp"
-             android:layout_height="wrap_content"
-             android:hint="Bio"
-             android:imeActionId="6"
-             />
-     </android.support.design.widget.TextInputLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="359dp"
+            android:orientation="vertical"
+            android:paddingLeft="40dp"
+            android:paddingTop="20dp">
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/txtFullName"
+                    android:layout_width="249dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:hint="Full Name"
+                    android:imeActionId="6" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/txtNickName"
+                    android:layout_width="249dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:hint="Nick Name"
+                    android:imeActionId="6" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/txtBio"
+                    android:layout_width="249dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:hint="Bio"
+                    android:imeActionId="6" />
+            </android.support.design.widget.TextInputLayout>
 
 
-         <Button
-             android:id="@+id/btnSave"
-             android:layout_width="249dp"
-             android:layout_height="wrap_content"
-             android:layout_margin="10dp"
-             android:textColor="@color/cardview_light_background"
-             android:text="Save"
-             android:background="@color/colorAccent"
-            />
-     </LinearLayout>
+            <Button
+                android:id="@+id/btnSave"
+                android:layout_width="249dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="6dp"
+                android:background="@color/colorTextPrimary"
+                android:elevation="8dp"
+                android:text="Save"
+                android:textColor="@color/cardview_light_background" />
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
