--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -5,10 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".ChatFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <android.support.v7.widget.RecyclerView
+       android:id="@+id/chatListRecyclerView"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       >
+
+   </android.support.v7.widget.RecyclerView>
+
 
 </FrameLayout>
