--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -6,9 +6,9 @@
     tools:context=".RequestFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/requestRecycler"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
