--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -83,5 +83,13 @@
         </android.support.v7.widget.CardView>
     </LinearLayout>
 
-
+    <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/cardview_light_background"
+        android:text="Logout"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/colorTextPrimary" />
 </FrameLayout>
