--- a/app/src/main/res/menu/menu_items.xml
+++ b/app/src/main/res/menu/menu_items.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/menu_contact"
-        android:icon="@drawable/ic_people_black_24dp"
-        android:title="People" />
+    <!--<item-->
+        <!--android:id="@+id/menu_contact"-->
+        <!--android:icon="@drawable/ic_people_black_24dp"-->
+        <!--android:title="People" />-->
     <item
         android:id="@+id/menu_friend"
         android:icon="@drawable/ic_person_black_24dp"
