--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,10 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash_screen"
+    android:background="@drawable/main_container"
     tools:context=".splashScreenActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/LogoName"
+        android:layout_width="122dp"
+        android:layout_height="58dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/image_text" />
+
+    <LinearLayout
+        android:id="@+id/postionIndector"
+        android:layout_width="90dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/viewPager"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal">
+
+    </LinearLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="310dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/LogoName">
+
+    </android.support.v4.view.ViewPager>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Start"
+        android:padding="10dp"
+        android:layout_margin="15dp"
+        android:background="@android:color/transparent"
+        android:elevation="7dp"
+        android:textColor="@color/colorTextPrimary"
+        android:text="Start Messaging"
+        android:layout_below="@+id/postionIndector"
+        android:layout_centerInParent="true"/>
+</RelativeLayout>
