--- a/app/src/main/res/drawable/ic_send_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_send_black_24dp.xml
@@ -1,4 +1,4 @@
-<vector android:alpha="0.9" android:height="24dp" android:tint="#1244BE"
+<vector android:alpha="0.9" android:height="24dp" android:tint="@color/cardview_light_background"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#FF000000" android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
