--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -10,6 +10,7 @@
         android:id="@+id/ChatToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:theme="@style/ThemeOverlay.AppCompat.Light"
         android:background="@color/colorPrimary">
 
     </android.support.v7.widget.Toolbar>
@@ -19,28 +20,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:layout_alignParentBottom="true"
       >
 
         <EditText
             android:id="@+id/edtMessage"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start|center"
             android:layout_marginLeft="5dp"
+            android:layout_marginRight="4dp"
+            android:cursorVisible="true"
+            android:focusedByDefault="true"
             android:layout_weight="0.8"
             android:hint="Write message..."
-            android:background="@color/cardview_light_background"
-            android:padding="5dp"
-            android:textColor="@color/cardview_dark_background"
-            android:textSize="15sp" />
+            android:background="@drawable/message_writing_background"
+            android:paddingLeft="13dp"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textColor="@android:color/background_dark"
+            android:textSize="16sp" />
 
         <ImageButton
             android:id="@+id/btnSendMessage"
-            android:layout_width="0dp"
-            android:layout_height="32dp"
-            android:layout_weight="0.1"
-            android:background="@drawable/ic_send_black_24dp" />
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:adjustViewBounds="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="4dp"
+            android:scaleType="centerInside"
+            android:paddingLeft="5dp"
+            android:src="@drawable/ic_send_black_24dp"
+            android:background="@drawable/chat_button_background" />
     </LinearLayout>
 
 
@@ -51,7 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/ChatToolbar"
         android:layout_above="@+id/linearLayout"
-        android:background="@drawable/chat_background"
+        android:background="@android:color/white"
         />
 
 </RelativeLayout >
