--- a/app/src/main/res/layout/activity_create_acount.xml
+++ b/app/src/main/res/layout/activity_create_acount.xml
@@ -51,6 +51,7 @@
                 android:layout_marginStart="64dp"
                 android:layout_marginTop="6dp"
                 android:text="1:50"
+                android:textColor="@color/seconderText"
                 android:textAlignment="center"
                 android:textSize="15dp" />
 
@@ -72,11 +73,11 @@
 
             <Button
                 android:id="@+id/btnVerify"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="64dp"
+                android:layout_width="90dp"
+                android:layout_height="38dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="39dp"
-                android:background="@drawable/btn_next"
+                android:background="@android:color/holo_green_dark"
                 android:text="Verify"
                 android:textColor="@android:color/background_light" />
 
@@ -88,7 +89,7 @@
                 android:layout_marginStart="64dp"
                 android:layout_marginTop="12dp"
                 android:text="ReSend"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@android:color/holo_blue_dark"
                 android:textColorHighlight="@color/colorPrimary"
                 android:textSize="18dp" />
         </LinearLayout>
@@ -130,7 +131,7 @@
                 android:layout_marginTop="0dp"
                 android:text=" Provide your correct phone and country code"
                 android:textAlignment="center"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textColor="@color/colorAccent" />
 
             <com.hbb20.CountryCodePicker
                 android:id="@+id/countryCodePicker"
@@ -163,7 +164,7 @@
                 android:layout_height="35dp"
                 android:layout_marginBottom="30dp"
                 android:layout_marginTop="40dp"
-                android:background="@color/colorTextPrimary"
+                android:background="@color/seconderText"
                 android:layout_gravity="center"
                 android:text="Next"
                 android:textSize="14dp"
