--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,6 +7,7 @@
     tools:context=".Home">
     <android.support.v7.widget.Toolbar
         android:id="@+id/HomeToolbar"
+        app:theme="@style/ThemeOverlay.AppCompat.Light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:titleTextColor="@color/cardview_light_background"
