--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,9 +73,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_sign_in"
+                android:text="Sign In"
                 android:textColor="@color/cardview_light_background"
-                android:background="@color/colorTextPrimary"
+                android:background="@color/colorPrimary"
                 android:textStyle="bold" />
             <TextView
                 android:id="@+id/txtSignUp"
