--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,97 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Profile">
+    android:orientation="horizontal"
+    tools:context=".Profile"
+    >
 
+<android.support.design.widget.AppBarLayout
+    android:layout_width="match_parent"
+    android:id="@+id/topbar"
+    android:layout_height="wrap_content">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <android.support.v7.widget.Toolbar
         android:id="@+id/profileToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:title="Profile"
-        app:titleTextColor="@color/cardview_light_background">
+        app:theme="@style/ThemeOverlay.AppCompat.Light"
+        android:background="@color/colorPrimary"/>
 
-    </android.support.v7.widget.Toolbar>
+        <TextView
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="@drawable/profile_background"
-
-        android:outlineProvider="background"
-        app:layout_constraintTop_toBottomOf="@+id/profileToolbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="57dp">
-
-        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:orientation="vertical">
+            android:layout_below="@+id/circleImageView"
+            android:layout_marginLeft="140dp"
+            android:layout_marginTop="10dp"
+            android:text="Dangerous"
+            android:textColor="@color/cardview_light_background" />
 
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/circleImageView"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:alpha="0.8"
-                android:src="@color/cardview_dark_background"
-                app:civ_border_color="@color/cardview_light_background"
-                app:civ_border_width="2dp" />
-
-        </LinearLayout>
-
-        <ImageButton
-            android:id="@+id/btnAddImage"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/circleImageView"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="10dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="54dp"
-            android:background="@drawable/ic_add_a_photo_black_24dp" />
+            android:elevation="20dp"
+            android:visibility="visible"
+            android:src="@drawable/avatar"
+            app:civ_border_color="@color/cardview_light_background"
+            app:civ_border_width="2dp" />
     </RelativeLayout>
+
+    <ImageButton
+        android:id="@+id/btnAddImage"
+        android:layout_width="47dp"
+        android:layout_height="47dp"
+        android:layout_gravity="right"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:clickable="true"
+        android:background="@drawable/chat_button_background"
+        android:elevation="7dp"
+        android:paddingBottom="5dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_add_a_photo_black_24dp" />
+
+</android.support.design.widget.AppBarLayout>
 
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView2"
         android:layout_width="match_parent"
-        android:layout_height="348dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
-        app:layout_constraintVertical_bias="0.038">
+        android:layout_height="391dp"
+        android:layout_below="@+id/topbar"
+        android:layout_marginBottom="29dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="359dp"
-            android:orientation="vertical"
-            android:paddingLeft="40dp"
-            android:paddingTop="20dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
+
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+              >
 
                 <EditText
                     android:id="@+id/txtFullName"
                     android:layout_width="249dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:hint="Full Name"
                     android:imeActionId="6" />
@@ -99,25 +94,30 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+               >
 
                 <EditText
                     android:id="@+id/txtNickName"
                     android:layout_width="249dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:hint="Nick Name"
                     android:imeActionId="6" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                >
 
                 <EditText
                     android:id="@+id/txtBio"
                     android:layout_width="249dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:hint="Bio"
                     android:imeActionId="6" />
@@ -127,16 +127,18 @@
             <Button
                 android:id="@+id/btnSave"
                 android:layout_width="249dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:layout_marginLeft="6dp"
-                android:layout_marginRight="6dp"
-                android:background="@color/colorTextPrimary"
+                android:layout_height="51dp"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:background="@color/seconderText"
                 android:elevation="8dp"
                 android:text="Save"
                 android:textColor="@color/cardview_light_background" />
+
+
         </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
