--- a/app/src/main/res/layout/activity_profile_viewer.xml
+++ b/app/src/main/res/layout/activity_profile_viewer.xml
@@ -8,45 +8,51 @@
     tools:context=".profileViewer"
    >
 
-    <LinearLayout
-        android:id="@+id/relativeLayout"
+<android.support.v7.widget.Toolbar
+    android:id="@+id/toolbarProfileview"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:theme="@style/ThemeOverlay.AppCompat.Light"
+    android:background="@color/colorPrimary">
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="215dp"
-        android:background="@drawable/profile_background"
-        android:orientation="vertical">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profileImageViewer"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:elevation="20dp"
-            android:src="@drawable/avatar"
-            app:civ_border_color="@color/cardview_light_background"
-            app:civ_border_width="2dp" />
-
+        android:layout_height="match_parent">
         <TextView
             android:id="@+id/txtFullNameProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/profileImage"
-            android:layout_gravity="center"
+            android:layout_below="@+id/profileImageViewer"
+            android:layout_marginLeft="140dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
             android:text="Dangerous"
             android:textColor="@color/cardview_light_background" />
-    </LinearLayout>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profileImageViewer"
+            android:layout_width="100dp"
+            android:layout_height="120dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:elevation="20dp"
+            android:src="@drawable/avatar"
+            app:civ_border_color="@color/cardview_light_background"
+            app:civ_border_width="2dp" />
+    </RelativeLayout>
+
+
+</android.support.v7.widget.Toolbar>
+
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView1"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/cardView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="185dp"
+        android:layout_marginBottom="-220dp"
         app:cardCornerRadius="5dp"
-        app:cardElevation="8dp"
-      >
+        app:cardElevation="8dp">
 
         <Button
             android:id="@+id/btnSendMesseg"
@@ -54,7 +60,7 @@
             android:layout_height="24dp"
             android:layout_gravity="center|left"
             android:layout_marginLeft="20dp"
-            android:background="@color/colorTextPrimary"
+            android:background="@color/seconderText"
             android:padding="5dp"
             android:text="Send message"
             android:textAlignment="center"
