--- a/app/src/main/res/layout/chat_list_layout.xml
+++ b/app/src/main/res/layout/chat_list_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -11,9 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:clickable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+       >
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profileImageChatList"
@@ -53,4 +51,4 @@
 
     </android.support.v7.widget.CardView>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
