--- a/app/src/main/res/layout/costome_toolbar_layout.xml
+++ b/app/src/main/res/layout/costome_toolbar_layout.xml
@@ -28,14 +28,16 @@
             android:layout_width="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_height="wrap_content"
+            android:textSize="12dp"
             android:textColor="@color/cardview_light_background"
             android:text="lastSeen"
             android:layout_below="@+id/txtToolbarFullName"
             android:layout_marginLeft="5dp"/>
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_margin="3dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="6dp"
+            android:alpha="0.8"
             android:id="@+id/profileImageChat"
              android:layout_alignParentRight="true"
             android:src="@drawable/avatar"/>
