--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -10,16 +10,7 @@
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
-                   <Button
-                       android:id="@+id/addNew"
-                       android:background="@color/cardview_light_background"
-                       android:textColor="@color/colorPrimaryDark"
-                       android:textStyle="normal"
-                       android:fontFamily="sans-serif"
-                       android:layout_margin="10dp"
-                       android:text="add new friend"
-                       android:layout_width="match_parent"
-                       android:layout_height="40dp" />
+
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
@@ -35,13 +26,22 @@
                        android:id="@+id/friendRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
-                       android:layout_below="@+id/addNew">
+                   >
 
                    </android.support.v7.widget.RecyclerView>
                </RelativeLayout>
 
     </ScrollView>
 
-
+     <android.support.design.widget.FloatingActionButton
+         android:id="@+id/addNew"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="bottom|right"
+         android:layout_marginBottom="35dp"
+         android:layout_marginRight="25dp"
+         android:src="@drawable/ic_create_black_24dp"
+         android:backgroundTint="@color/colorAccent"
+         />
 
 </FrameLayout>
