--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -6,90 +6,98 @@
     tools:context=".SettingFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <android.support.v7.widget.CardView
-            android:id="@+id/cardProfile"
+        android:layout_height="match_parent">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_margin="1dp">
-            <RelativeLayout
+            android:layout_height="match_parent"
+            >
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardProfile"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profileImage"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:src="@drawable/avatar"
-                    android:layout_margin="6dp"/>
-                <TextView
-                    android:id="@+id/textName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="Full name"
-                    android:textSize="19dp"
-                    android:layout_marginTop="5dp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:layout_toEndOf="@+id/profileImage"
-                    />
-                <TextView
-                    android:id="@+id/textBio"
-                    android:layout_width="240dp"
-                    android:layout_height="wrap_content"
-                    android:text="Bio"
-                    android:textSize="16dp"
-                    android:layout_marginTop="8dp"
-                    android:paddingRight="5dp"
-                    android:layout_toEndOf="@+id/profileImage"
-                    android:layout_below="@+id/textName"/>
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/ic_navigate_next_black_24dp"/>
-            </RelativeLayout>
+                android:layout_height="80dp"
+                android:layout_marginTop="5dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/profileImage"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:src="@drawable/avatar"
+                        android:layout_margin="6dp"/>
+                    <TextView
+                        android:id="@+id/textName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:hint="Full name"
+                        android:textSize="19dp"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:layout_toEndOf="@+id/profileImage"
+                        />
+                    <TextView
+                        android:id="@+id/textBio"
+                        android:layout_width="240dp"
+                        android:layout_height="wrap_content"
+                        android:text="Bio"
+                        android:textSize="16dp"
+                        android:layout_marginTop="8dp"
+                        android:paddingRight="5dp"
+                        android:layout_toEndOf="@+id/profileImage"
+                        android:layout_below="@+id/textName"/>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_navigate_next_black_24dp"/>
+                </RelativeLayout>
 
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            android:id="@+id/cardRequestSent"
-            android:layout_width="match_parent"
-            android:layout_height="49dp"
-            android:layout_marginTop="30dp">
-            <RelativeLayout
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardRequestSent"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="49dp"
+                android:layout_marginTop="200dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Sent friend request"
-                    android:textSize="19dp"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/colorAccent"
-                    />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Sent friend request"
+                        android:textSize="19dp"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@android:color/holo_blue_dark"
+                        />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/ic_navigate_next_black_24dp"/>
-            </RelativeLayout>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_navigate_next_black_24dp"/>
+                </RelativeLayout>
 
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-    <Button
-        android:id="@+id/btnLogout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/cardview_light_background"
-        android:text="Logout"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="10dp"
-        android:textColor="@color/colorTextPrimary" />
+            <Button
+                android:id="@+id/btnLogout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/cardRequestSent"
+                android:layout_gravity="bottom"
+                android:background="@color/cardview_light_background"
+                android:text="Logout"
+                android:textColor="@android:color/holo_red_dark" />
+        </RelativeLayout>
+    </ScrollView>
+
+
+
 </FrameLayout>
