--- a/app/src/main/res/layout/people_layout.xml
+++ b/app/src/main/res/layout/people_layout.xml
@@ -25,10 +25,11 @@
             android:layout_height="wrap_content"
             android:id="@+id/txtPeopleName"
             android:hint="Name"
+            android:textStyle="bold"
             android:textSize="14dp"
             android:textColor="@color/cardview_dark_background"
             android:layout_marginLeft="80dp"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="15dp"/>
         <TextView
             android:id="@+id/txtPeopleBio"
             android:layout_width="wrap_content"
