--- a/app/src/main/res/layout/request_received_layout.xml
+++ b/app/src/main/res/layout/request_received_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:clickable="true"
+        android:paddingBottom="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -44,29 +45,30 @@
             android:id="@+id/btnCancelRequest"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:layout_gravity="top|right"
+            android:layout_marginLeft="30dp"
             android:textSize="11dp"
+            android:layout_gravity="bottom|center"
             android:padding="2dp"
-            android:elevation="5dp"
+            android:layout_marginBottom="3dp"
             android:text="Cancel Request"
-            android:layout_marginTop="45dp"
             android:layout_marginRight="10dp"
             android:background="@android:color/transparent"
-            android:textColor="@color/colorTextPrimary"
+            android:textColor="@color/colorAccent"
              />
         <Button
             android:id="@+id/btnAcceptRequest"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:layout_gravity="top|right"
+            android:layout_gravity="bottom|right"
             android:textSize="11dp"
             android:padding="2dp"
             android:elevation="5dp"
             android:text="Accept Request"
             android:background="@android:color/transparent"
             android:textColor="@color/colorPrimaryDark"
-            android:layout_margin="10dp" />
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="3dp"/>
 
     </android.support.v7.widget.CardView>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
