--- a/app/src/main/res/drawable/active_user_indector.xml
+++ b/app/src/main/res/drawable/active_user_indector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-    <solid android:color="@android:color/holo_green_dark"/>
-    <size android:width="50dp" android:height="50dp"/>
+    <solid android:color="#0AC304"/>
+    <size android:width="50sp" android:height="50sp"/>
 
 </shape>
