--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -24,7 +24,16 @@
         android:paddingBottom="5dp"
         android:layout_alignParentBottom="true"
       >
-
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="4dp"
+            android:scaleType="center"
+            android:src="@drawable/ic_image_black_24dp"
+             />
         <EditText
             android:id="@+id/edtMessage"
             android:layout_width="wrap_content"
@@ -53,6 +62,7 @@
             android:layout_marginRight="4dp"
             android:scaleType="centerInside"
             android:paddingLeft="5dp"
+            android:visibility="invisible"
             android:src="@drawable/ic_send_black_24dp"
             android:background="@drawable/chat_button_background" />
     </LinearLayout>
