--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,66 +8,68 @@
     tools:context=".Profile"
     >
 
-<android.support.design.widget.AppBarLayout
-    android:layout_width="match_parent"
-    android:id="@+id/topbar"
-    android:layout_height="wrap_content">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
     <android.support.v7.widget.Toolbar
         android:id="@+id/profileToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="30dp"
         app:theme="@style/ThemeOverlay.AppCompat.Light"
-        android:background="@color/colorPrimary"/>
+        android:background="@color/colorPrimary" >
 
-        <TextView
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/circleImageView"
-            android:layout_marginLeft="140dp"
-            android:layout_marginTop="10dp"
-            android:text="Dangerous"
-            android:textColor="@color/cardview_light_background" />
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/circleImageView"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:elevation="20dp"
-            android:visibility="visible"
-            android:src="@drawable/avatar"
-            app:civ_border_color="@color/cardview_light_background"
-            app:civ_border_width="2dp" />
-    </RelativeLayout>
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/circleImageView"
+                    android:layout_width="140dp"
+                    android:layout_height="120dp"
+                    android:layout_centerInParent="true"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:elevation="20dp"
+                    app:civ_border_color="@color/cardview_light_background"
+                    app:civ_border_width="2dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+            </android.support.constraint.ConstraintLayout>
+
+
+
+</android.support.v7.widget.Toolbar>
 
     <ImageButton
         android:id="@+id/btnAddImage"
         android:layout_width="47dp"
         android:layout_height="47dp"
-        android:layout_gravity="right"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="10dp"
-        android:clickable="true"
-        android:background="@drawable/chat_button_background"
-        android:elevation="7dp"
-        android:paddingBottom="5dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_add_a_photo_black_24dp" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="16dp"
 
-</android.support.design.widget.AppBarLayout>
+        android:layout_marginTop="165dp"
+        android:background="@drawable/chat_button_background"
+        android:clickable="true"
+        android:elevation="7dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_add_a_photo_black_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="match_parent"
-        android:layout_height="391dp"
-        android:layout_below="@+id/topbar"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/profileToolbar"
         android:layout_marginBottom="29dp">
 
         <LinearLayout
@@ -79,8 +81,7 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-              >
+                android:layout_marginTop="25dp">
 
                 <EditText
                     android:id="@+id/txtFullName"
@@ -94,8 +95,7 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-               >
+                android:layout_height="wrap_content">
 
                 <EditText
                     android:id="@+id/txtNickName"
@@ -110,8 +110,7 @@
             <android.support.design.widget.TextInputLayout
 
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <EditText
                     android:id="@+id/txtBio"
@@ -128,8 +127,8 @@
                 android:id="@+id/btnSave"
                 android:layout_width="249dp"
                 android:layout_height="51dp"
-                android:layout_marginTop="20dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="20dp"
                 android:background="@color/seconderText"
                 android:elevation="8dp"
                 android:text="Save"
