--- a/app/src/main/res/layout/activity_profile_viewer.xml
+++ b/app/src/main/res/layout/activity_profile_viewer.xml
@@ -30,11 +30,12 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profileImageViewer"
-            android:layout_width="100dp"
+            android:layout_width="140dp"
             android:layout_height="120dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:elevation="20dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/avatar"
             app:civ_border_color="@color/cardview_light_background"
             app:civ_border_width="2dp" />
@@ -87,7 +88,14 @@
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
         android:layout_marginTop="220dp">
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Profile Information"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"/>
         <LinearLayout
             android:layout_width="270dp"
             android:layout_height="200dp"
