--- a/app/src/main/res/layout/chat_list_layout.xml
+++ b/app/src/main/res/layout/chat_list_layout.xml
@@ -44,8 +44,9 @@
             android:id="@+id/txtStatusChat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Offline"
+            android:textColor="@color/seconderText"
             android:layout_gravity="top|right"
-            android:hint="Mon"
             android:layout_margin="10dp"
             android:textSize="13dp" />
 
